--- a/force-app/main/default/lwc/navigateToPlacement/navigateToPlacement.html
+++ b/force-app/main/default/lwc/navigateToPlacement/navigateToPlacement.html
@@ -1,4 +1,4 @@
 <template>
-    <lightning-button variant="success" label="Navigate To Placement" title="Successful action" onclick={handleOpenNewTab}
-        class="slds-m-left_x-small"></lightning-button>
+    <!--lightning-button variant="success" label="Navigate To Placement" title="Successful action" onclick={handleOpenNewTab}
+        class="slds-m-left_x-small"></lightning-button-->
 </template>
