--- a/force-app/main/default/lwc/myBiweeklyProject/myBiweeklyProject.html
+++ b/force-app/main/default/lwc/myBiweeklyProject/myBiweeklyProject.html
@@ -1,3 +1,10 @@
+<!--
+@description       : 
+@author            : Ali
+@group             : 
+@last modified on  : 12-18-2024
+@last modified by  : Ali
+-->
 <template>
 <lightning-quick-action-panel>
 <lightning-card icon-name="standard:account" variant="base">
